// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui reducer default 1`] = `
Object {
  "hourly": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "minutely": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "prices": Array [],
  "status": Array [],
}
`;

exports[`ui reducer dynamoHourly 1`] = `
Object {
  "hourly": Object {
    "test": "test",
  },
  "minutely": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "prices": Array [],
  "status": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer dynamoMinutely 1`] = `
Object {
  "hourly": Object {
    "test": "test",
  },
  "minutely": Object {
    "test": "test",
  },
  "prices": Array [],
  "status": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer dynamoPrices 1`] = `
Object {
  "hourly": Object {
    "test": "test",
  },
  "minutely": Object {
    "test": "test",
  },
  "prices": Array [
    "test",
  ],
  "status": Object {
    "test": "test",
  },
}
`;

exports[`ui reducer dynamoStatus 1`] = `
Object {
  "hourly": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "minutely": Object {
    "bitfinex": Array [],
    "gdax": Array [],
    "gemini": Array [],
    "kraken": Array [],
  },
  "prices": Array [],
  "status": Object {
    "test": "test",
  },
}
`;
